[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://baybie.png" type="Texture" id=2]
[ext_resource path="res://twerk.wav" type="AudioStream" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -70.0
margin_right = 43.0
margin_bottom = -26.0
rect_scale = Vector2( 1.60432, 1.5699 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
text = "Quit"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 764, 255 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.776471, 0.113725, 0.113725, 1 )
margin_left = 271.0
margin_top = 178.0
margin_right = 371.0
margin_bottom = 218.0
rect_scale = Vector2( 5.22308, 5.64341 )
text = "Save him!"

[node name="BussItDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.118
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
